=== 1.2.0 (TBD)
* Add RJack::TarPit::BaseStrategy.test_line_match for common
  version, etc. file checks. See example usage in this gem's Rakefile.

=== 1.1.0 (2009-12-19)
* Add :rdoc_diagram option to use Graphviz dot --diagram with rdoc.
* Added gem :push (gemcutter) and :install tasks

=== 1.0.1 (2009-10-11)
* Make Hoe the last dependency to avoid version conflict with
  rubyforge or others.

=== 1.0.0 (2009-10-10)
* Initial release.